[package]
name = "sdr-usrp-rs"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

description = "USRP (B210 / B205mini) implementation of the SdrSource trait."

[dependencies]
sdr-source-rs = { git = "https://github.com/isaacbentley/sdr-source-rs.git", branch = "main" }
uhd = "0.3.0"
crossbeam = "0.8"
num-complex = "0.4"
anyhow = "1.0"
tracing = "0.1"
